# filetool

./: .description.md  .install.md  MANIFEST.in  pyproject.toml  setup.py  url.sh
filetool/: __init__.py  append_bytes_to_path.py  append_line_to_path.py  cli.py  filetool.py  validation.py
tests/: broken_test_ensure_bytes_present_make_parents_requires_create_if_missing.py  conftest.py  locked_file_handle_orig.py  test_append_all_line_endings.py  test_append_bytes_to_file.py  test_append_bytes_to_file_comment_marker_bytes_no_line_ending.py  test_append_bytes_to_file_comment_marker_empty_bytes.py  test_append_bytes_to_file_comment_marker_non_bytes_type.py  test_append_bytes_to_file_comment_marker_none_without_unique_bytes.py  test_append_bytes_to_file_comment_marker_type_none_with_unique_bytes.py  test_append_bytes_to_file_comment_marker_without_unique_bytes.py  test_append_bytes_to_file_empty_bytes_payload.py  test_append_bytes_to_file_full_valid_dedup.py  test_append_bytes_to_file_ignore_leading_whitespace_false_without_unique_bytes.py  test_append_bytes_to_file_ignore_leading_whitespace_without_unique_bytes.py  test_append_bytes_to_file_ignore_trailing_whitespace_false_without_unique_bytes.py  test_append_bytes_to_file_ignore_trailing_whitespace_without_unique_bytes.py  test_append_bytes_to_file_incorrect_type_line_ending_without_unique_bytes.py  test_append_bytes_to_file_invalid_type_create_if_missing.py  test_append_bytes_to_file_invalid_type_ignore_leading_whitespace.py  test_append_bytes_to_file_invalid_type_ignore_trailing_whitespace.py  test_append_bytes_to_file_invalid_type_make_parents.py  test_append_bytes_to_file_invalid_type_unique_bytes.py  test_append_bytes_to_file_invalid_type_unlink_first.py  test_append_bytes_to_file_line_ending_none_with_unique_bytes.py  (+22 more)
