[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "filetool"
version = "0.0.1760910191"
description = "Common file operations"
authors = [
    { name = "Justin Keogh", email = "github.com@v6y.net" },
]
dependencies = [
    "click",
    "psutil",
    "pytest",
    "hypothesis",
]
license = "ISC"
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/jakeogh/filetool"

[project.scripts]
filetool = "filetool.cli:cli"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
exclude = [
    "tests",
]

[tool.setuptools.package-data]
filetool = [
    "py.typed",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "eintr_tests: Tests that verify EINTR signal handling (run with -m eintr_tests)",
]

